# peagent_tool

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  justfile  mkdocs.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md
docs/tutorials/: ism-attribution.md
skills/peagent-tool-maintainer/: SKILL.md
skills/peagent-tool-maintainer/agents/: openai.yaml
skills/peagent-tool-maintainer/references/: docs-workflow.md  release-sync.md  repo-contract.md
skills/peagent-tool-maintainer/scripts/: check_ready.py  scaffold_tutorial.py
src/peagent_tool/: __init__.py  celltype_prediction.py  cli.py  ism.py  sequence.py
src/peagent_tool/_vendor/: __init__.py  scbasset_model.py
tests/: __init__.py  test_celltype_prediction.py  test_ism_attribution.py
